--- a/index.html
+++ b/index.html
@@ -44,10 +44,14 @@
                   <label>Nombre</label>
                   <input type="text" class="form-control" name="nombre" id="name" aria-describedby="helpId">
                   <small id="helpId" class="form-text text-muted">ingrese un nombre</small>
-                  <br>
                   <input type="submit" value="Agregar" id="add-button">
                   <input type="submit" value="Eliminar" id="delete-button">
                 </div>
+                <div class="form-group">
+                    <label>Consola</label>
+                    <select class="form-control" name="consola" id="console" size="3">
+                    </select>
+                  </div>
             </div>
             <div class="col-3">
                 <div class="form-group">
@@ -60,12 +64,18 @@
                 <div class="title"> Instrucciones</div>
                 <br>
                 <div>
-                    Presione el bot&oacute;n agregar para ingresar un nombre a la lista y seleccione uno y toque eliminar para sacarlo de la lista. Es necesario selecionar uno para eliminar
+                    Presione el bot&oacute;n agregar para ingresar un nombre a la lista y seleccione uno y toque eliminar para sacarlo de la lista. Es necesario selecionar uno para eliminar. <br>
+                    Como agregado se soporta dar enter para agregar nombres y backspace para eliminar los nombres, si est&aacute; vacio simplemente se ignora para enter y si no ha seleccionado 
+                    nada y da backspace saltar&aacute; la alerta. <br>
+                    <b>La consola muestra las acciones más recientes en el tope.</b>
                 </div>
             </div>
         </div>
     </div>
       
+    <!-- Script personal -->
+    <script src="js/script.js"></script>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
