reemplazo del botón backspace por suprimir

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 <br>
                 <div>
                     Presione el bot&oacute;n agregar para ingresar un nombre a la lista y seleccione uno y toque eliminar para sacarlo de la lista. Es necesario selecionar uno para eliminar. <br>
-                    Como agregado se soporta dar enter para agregar nombres y backspace para eliminar los nombres, si est&aacute; vacio simplemente se ignora para enter y si no ha seleccionado 
-                    nada y da backspace saltar&aacute; la alerta. <br>
+                    Como agregado se soporta dar enter para agregar nombres y suprimir para eliminar los nombres, si est&aacute; vacio simplemente se ignora para enter y si no ha seleccionado 
+                    nada y da suprimir saltar&aacute; la alerta. <br>
                     <b>La consola muestra las acciones más recientes en el tope.</b>
                 </div>
             </div>
